<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="swipe_left">Toggle</string>
    <string name="label_all_logjobs">All log jobs</string>
    <string name="label_enabled">Enabled</string>
    <string name="label_phonetrack_lj">PhoneTrack log jobs</string>
    <string name="label_custom_lj">Custom log jobs</string>
    <string name="label_custom">Custom</string>
    <string name="action_create">New log job</string>
    <string name="action_create_share">Import PhTrk logging URL</string>
    <string name="action_create_custom_share">Import custom logging URL</string>
    <string name="action_settings">Settings</string>
    <string name="action_syslog">Activity logs</string>
    <string name="setting_title">Title</string>
    <string name="setting_title_long">Log job title (only visible in the app)</string>
    <string name="mandatory">(mandatory)</string>
    <string name="setting_devicename">Device name</string>
    <string name="setting_devicename_long">Device name or reservation token</string>
    <string name="setting_token">Session token</string>
    <string name="setting_token_long">Session identification token</string>
    <string name="setting_lj_url">Nextcloud address</string>
    <string name="setting_lj_url_long">Nextcloud address of target PhoneTrack instance hosting the session</string>
    <string name="setting_url">Target address</string>
    <string name="setting_url_long">Target address to be requested with value replacement</string>
    <string name="setting_post_title">Use POST method</string>
    <string name="setting_post_summary">instead of GET method. GET parameters will be converted to POST.</string>
    <string name="action_search">Search</string>
    <string name="example_hostname" translatable="false">example.org</string>
    <string name="simple_cancel">Cancel</string>
    <string name="simple_yes">Yes</string>
    <string name="simple_no">No</string>
    <string name="simple_ok">Ok</string>
    <string name="simple_edit_pt">Edit PhoneTrack log job</string>
    <string name="simple_edit_cu">Edit custom log job</string>
    <string name="simple_about">About</string>
    <string name="simple_map">Map</string>
    <string name="simple_map_title">Session %s</string>
    <string name="action_session_created">Session created</string>
    <string name="action_logjob_deleted">Log job deleted</string>
    <string name="action_logjob_restored">Log job restored</string>
    <string name="action_undo">Undo</string>
    <string name="action_drawer_open">open side menu</string>
    <string name="action_drawer_close">close side menu</string>
    <string name="action_frequency">Set refresh frequency</string>
    <string name="action_map_limit">Set max point number</string>
    <string name="action_map_last_min">Set time filter</string>
    <string name="action_pin_to_homescreen">Pin map to home screen</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_save">Save</string>
    <string name="menu_preset_bike">Bike profile</string>
    <string name="menu_preset_walk">Walk profile</string>
    <string name="menu_preset_drive">Drive profile</string>
    <string name="menu_preset_precision">Max precision profile</string>
    <string name="menu_preset_battery">Battery saving profile</string>
    <string name="preset_hint_title">Logjob settings presets</string>
    <string name="preset_hint_content">Keep in mind those presets are just examples and you might want to adjust selected values.</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="setting_set_preset">Preconfigured profiles</string>
    <string name="setting_set_preset_summary">Choose a preconfigured profile that fits your activity.</string>
    <string name="menu_select_session">Use PhoneTrack session</string>
    <string name="menu_from_url">Use PhoneTrack logging link</string>
    <string name="menu_share">Share</string>
    <string name="session_not_found">Session not found</string>
    <string name="fab_create_session">Create a session</string>
    <string name="fab_create_phonetrack">New PhoneTrack log job</string>
    <string name="fab_create_custom">New Custom log job</string>
    <string name="fab_create_maps">New Nextcloud Maps log job</string>
    <string name="setting_json_title">Send JSON payload instead of key/value pairs (OpenHab compatible)</string>
    <string name="setting_json_summary">Send JSON payload</string>
    <string name="setting_password">HTTP password</string>
    <string name="setting_password_long">Password for basic HTTP authentication (optional)</string>
    <string name="setting_login">HTTP login</string>
    <string name="setting_login_long">Login for basic HTTP authentication (optional)</string>
    <string name="setting_min_distance">Minimum distance</string>
    <string name="setting_min_distance_long">Minimum distance between two logged points (meters)</string>
    <string name="setting_min_time">Minimum time</string>
    <string name="setting_min_time_mixed">Maximum time</string>
    <string name="setting_min_time_long">Minimum time between two logged points (seconds). Must be superior than location timeout.</string>
    <string name="setting_min_time_mixed_long">Maximum time between two logged points (seconds)</string>
    <string name="setting_min_accuracy">Minimum accuracy</string>
    <string name="setting_min_accuracy_long">Minimum accuracy for logged points (meters). Do not log if accuracy value is greater than:</string>
    <string name="setting_keepgps_title">Keep GPS on between fixes</string>
    <string name="setting_keepgps_summary">This will get more accurate positions but will have more effect on battery life. Use it when minimum time is under 60 seconds.</string>
    <string name="setting_significantmotion_enabled">Significant motion mode</string>
    <string name="setting_significantmotion_title">Get position only after significant motion</string>
    <string name="setting_significantmotion_summary">Experimental: Wait for significant motion before getting next position. Saves a lot of battery in some cases. Incompatible with some other options.</string>
    <string name="setting_significantmotion_min_time_applied">Apply minimum time</string>
    <string name="setting_significantmotion_min_time_applied_summary">Don\'t record a position every time motion is detected, wait "minimum time" between two points. This saves battery.</string>
    <string name="setting_significantmotion_mixed">Hybrid mode (apply maximum time)</string>
    <string name="setting_significantmotion_mixed_summary">Record a position every time motion is detected. If no motion is detected, Record a position every \"maximum time\". This saves a little less battery.</string>
    <string name="setting_significantmotion_timeout">Location timeout</string>
    <string name="setting_significantmotion_timeout_summary">Time to wait for a single location fix (seconds). Saves battery in areas without good coverage. If using both GPS and network this also determines after how long the lower quality network position will be used. Set to zero to disable timeout. Must be inferior than min time.</string>
    <string name="logjob_title_log_to">Log to %s</string>
    <string name="default_nextcloud_url">https://yournextcloud.org</string>
    <string name="default_device_name">myDeviceName</string>
    <string name="default_session_token">supertoken</string>
    <string name="logjob_info_dialog_title">About %s</string>
    <string name="settings_server_settings">Account</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_notification_importance_title">Low notification importance</string>
    <string name="settings_notification_importance_subtitle">Reduce logging notification importance</string>
    <string name="settings_reset_stats">Reset stats on logjob activation</string>
    <string name="settings_reset_stats_subtitle">Reset statistics in logjob information dialog when logjob is activated</string>
    <string name="settings_sms">Listen to SMS</string>
    <string name="settings_sms_subtitle">Listen to incoming SMS and answer location information if following keyword is received</string>
    <string name="settings_sms_keyword_title">SMS keyword</string>
    <string name="settings_sms_keyword_long">If this phone receives a SMS which just contains this keyword, location information will be sent back.</string>
    <string name="settings_use_server_color_title">Use server color</string>
    <string name="settings_use_server_color_subtitle">Get server color when syncing and use it as main app color</string>
    <string name="settings_providers_title">Location providers</string>
    <string name="settings_color_title">App main color</string>
    <string name="settings_color_summary">Color for action bars, map buttons etc...</string>
    <string name="settings_cert_category">Manage certificates</string>
    <string name="settings_cert_trust_system">Trust system certificates</string>
    <string name="settings_cert_trust_system_on">System and user-added CAs will be trusted (recommended)</string>
    <string name="settings_cert_trust_system_off">System and user-added CAs won\'t be trusted</string>
    <string name="settings_cert_reset">Reset (un)trusted certificates</string>
    <string name="settings_cert_reset_summary">Resets trust of all custom certificates</string>
    <string name="settings_network_category">Network</string>
    <string name="settings_logging_category">Logging</string>
    <string name="settings_sms_category">Sms</string>
    <string name="settings_theming_category">Theming</string>
    <string name="settings_power_saving_awareness_title">Respect power saving mode state</string>
    <string name="settings_power_saving_awareness_subtitle">Freeze active logjobs while power saving mode is enabled</string>
    <string name="settings_offline_mode_awareness_title">Respect offline mode state</string>
    <string name="settings_offline_mode_awareness_subtitle">Freeze active logjobs while offline mode is enabled</string>
    <string name="pref_autostart_title">Auto start</string>
    <string name="pref_autostart_summary">Logging will start on system boot</string>
    <string name="pref_autostart_default" translatable="false">false</string>
    <string name="pref_shownbsynced_title">Show number of synced points</string>
    <string name="pref_shownbsynced_summary">synced = sent to the server</string>
    <string name="pref_shownbsynced_default" translatable="false">false</string>
    <string name="pref_key_certs" translatable="false">certificates</string>
    <string name="pref_key_trust_system_certs" translatable="false">trustSystemCerts</string>
    <string name="pref_key_reset_trust" translatable="false">resetTrust</string>
    <string name="pref_key_theme" translatable="false">darkTheme</string>
    <string name="pref_key_color" translatable="false">appColor</string>
    <string name="pref_key_sms" translatable="false">listenSMS</string>
    <string name="pref_key_sms_keyword" translatable="false">SMSkeyword</string>
    <string name="pref_key_use_server_color" translatable="false">useServerColor</string>
    <string name="pref_key_autostart" translatable="false">autostart</string>
    <string name="pref_key_shownbsynced" translatable="false">shownbsynced</string>
    <string name="pref_value_theme_light">Light</string>
    <string name="pref_key_providers" translatable="false">locationProviders</string>
    <string name="pref_key_notification_importance" translatable="false">notificationImportance</string>
    <string name="pref_key_reset_stats" translatable="false">resetStats</string>
    <string name="pref_key_power_saving_awareness" translatable="false">powerSavingAware</string>
    <string name="pref_key_offline_mode_awareness" translatable="false">offlineModeAware</string>
    <string name="pref_value_providers" translatable="false">1</string>
</resources>