<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:orderInCategory="80"
        android:title="@string/menu_share"
        app:showAsAction="never"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider" />
    <item
        android:id="@+id/menu_selectSession"
        android:icon="@drawable/ic_share_white_24dp"
        android:orderInCategory="83"
        android:title="@string/menu_select_session"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_fromLogUrl"
        android:icon="@drawable/ic_clear_white_24dp"
        android:orderInCategory="82"
        android:title="@string/menu_from_url"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="87"
        android:title="@string/menu_delete"
        app:showAsAction="always" />


</menu>