<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_enabled"
        android:checkable="true"
        android:orderInCategory="81"
        android:title="@string/menu_enabled"
        app:actionLayout="@layout/switch_item"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:orderInCategory="80"
        android:title="@string/menu_share"
        app:showAsAction="ifRoom"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />
    <item
        android:id="@+id/menu_cancel"
        android:icon="@drawable/ic_clear_white_24dp"
        android:orderInCategory="110"
        android:title="@string/simple_cancel"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:orderInCategory="89"
        android:title="@string/menu_delete"
        app:showAsAction="ifRoom" />

</menu>