<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/logjobsListActivityActionBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:elevation="4dp" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/swiperefreshlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_normal"
            tools:context="net.eneiluj.nextcloud.phonetrack.android.activity.LogjobsListViewActivity"
            tools:ignore="MergeRootFrame">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_normal"
                android:scrollbars="vertical" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/floatingMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        fab:menu_labels_ellipsize="end"
        fab:menu_labels_singleLine="true"
        fab:menu_fab_label="@string/simple_cancel"
        fab:menu_backgroundColor="@color/bg_normal_transparent"
        fab:menu_animationDelayPerItem="0"
        fab:menu_colorNormal="@color/primary"
        fab:menu_colorPressed="@color/primary"
        fab:menu_colorRipple="#ffffff"
        android:padding="8dp">


        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_create_phonetrack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_notify_24dp"
            fab:fab_size="normal"
            app:fab_colorNormal="@color/primary"
            app:fab_colorPressed="@color/primary"
            app:fab_showAnimation="@anim/fab_slide_in_from_right"
            app:fab_hideAnimation="@anim/fab_slide_out_to_right"
            fab:fab_label="@string/fab_create_phonetrack"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_create_custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_link_white_24dp"
            fab:fab_size="normal"
            app:fab_colorNormal="@color/primary"
            app:fab_colorPressed="@color/primary"
            app:fab_showAnimation="@anim/fab_slide_in_from_right"
            app:fab_hideAnimation="@anim/fab_slide_out_to_right"
            fab:fab_label="@string/fab_create_custom"/>

    </com.github.clans.fab.FloatingActionMenu>
</androidx.coordinatorlayout.widget.CoordinatorLayout>